lab_2/bison_examples/calc.y
/* Example 2, Simple Calculator Parser */
%{
#include <stdio.h>

extern int yylex(); // Declared by lexer
void yyerror(const char *s); // Declared later in file
%}

/* declare tokens */
%token NUMBER
%token ADD SUB MUL DIV ABS
%token OP CP
%token EOL

%%

calclist: /* nothing */
 | calclist exp EOL { printf("= %d\n> ", $2); }
 | calclist EOL { printf("> "); } /* blank line or a comment */
 ;

exp: factor
 | exp ADD exp { $$ = $1 + $3; }
 | exp SUB factor { $$ = $1 - $3; }
 ;

factor: term
 | factor MUL term { $$ = $1 * $3; }
 | factor DIV term { $$ = $1 / $3; }
 ;

term: NUMBER
 | ABS exp ABS { $$ = $2 >= 0 ? $2 : - $2; }
 | OP exp CP { $$ = $2; }
 ;
%%
int main( int argc, char **argv )
{
  ++argv, --argc;
  if ( argc > 0 )
  stdin = fopen( argv[0], "r" );
  yyparse();

  return 0;
}

void yyerror(const char *s)
{
  fprintf(stderr, "error: %s\n", s);
}
